erDiagram
    ORGANIZATIONS ||--o{ ORGANIZATION_MEMBERS : has
    USERS ||--o{ ORGANIZATION_MEMBERS : joins
    ORGANIZATIONS ||--o{ AGENTS : owns
    ORGANIZATIONS ||--o{ KNOWLEDGE_BASES : owns
    ORGANIZATIONS ||--o{ API_KEYS : owns
    AGENTS ||--o{ CONVERSATIONS : handles
    CONVERSATIONS ||--o{ MESSAGES : contains
    KNOWLEDGE_BASES ||--o{ DOCUMENTS : contains
    DOCUMENTS ||--o{ DOCUMENT_CHUNKS : "chunked into"
    AGENTS ||--o{ WIDGETS : "published as"
    KNOWLEDGE_BASES ||--o{ WIDGETS : "grounds"

    USERS {
        uuid id PK
        string email UK
        string password_hash "Argon2, nullable"
        bool is_email_verified
        enum role "owner/admin/member"
        enum status "active/suspended/deleted"
    }
    ORGANIZATIONS {
        uuid id PK
        string name
        string slug UK
        enum plan "free/starter/growth/enterprise"
        uuid owner_user_id FK
        jsonb settings
    }
    ORGANIZATION_MEMBERS {
        uuid id PK
        uuid organization_id FK
        uuid user_id FK
        enum role "owner/admin/member/viewer"
        enum status "active/invited/removed"
    }
    AGENTS {
        uuid id PK
        uuid organization_id FK
        uuid project_id FK "nullable"
        string name
        enum type "chat/whatsapp/sales/support"
        enum status "draft/active/paused/archived"
        text description
    }
    CONVERSATIONS {
        uuid id PK
        uuid organization_id FK
        uuid agent_id FK
        uuid user_id FK "nullable, visitor"
        enum channel "chat/whatsapp/sms/email/etc"
        enum status "active/completed/qualified/failed/lost"
        datetime started_at
    }
    MESSAGES {
        uuid id PK
        uuid conversation_id FK
        enum sender "agent/customer/system/tool"
        text message
        int token_count "nullable"
        jsonb metadata
    }
    KNOWLEDGE_BASES {
        uuid id PK
        uuid organization_id FK
        uuid project_id FK "nullable"
        string name
        enum status "draft/active/archived"
    }
    DOCUMENTS {
        uuid id PK
        uuid knowledge_base_id FK
        uuid organization_id FK "denormalised"
        string s3_key
        enum status "pending/processing/processed/failed"
        bigint size_bytes
    }
    DOCUMENT_CHUNKS {
        uuid id PK
        uuid document_id FK "nullable, or website_page_id"
        int chunk_index
        text content
        vector embedding "pgvector 1024, nullable"
    }
    WIDGETS {
        uuid id PK
        uuid organization_id FK
        uuid agent_id FK "nullable"
        uuid knowledge_base_id FK "nullable"
        string public_key UK
        string status "draft/published/paused"
        string widget_type "bubble/inline/fullpage/popup/button"
    }
    API_KEYS {
        uuid id PK
        uuid organization_id FK
        string prefix UK "non-secret, for lookup/display"
        string key_hash "SHA-256 of the full secret"
        jsonb scopes
    }
